roles/openshift-apps/flatpak-cache/files/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 5m
  labels:
    app: flatpak-cache
  name: web-direct
  namespace: flatpak-cache
spec:
  host: flatpak-cache.stg.fedoraproject.org
  port:
    targetPort: web
  to:
    kind: Service
    name: flatpak-cache
